<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0  http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.kafka-tools</groupId>
    <artifactId>kafka-logback-appender-core</artifactId>
    <packaging>pom</packaging>
    <name>Kafka log appender example</name>
    <version>0.0.1</version>

    <modules>
        <module>kafka-logback-appender</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compile.encoding>UTF-8</maven.compile.encoding>
        <maven.test.compile.encoding>UTF-8</maven.test.compile.encoding>
        <maven.junit.jvmargs>-Dfile.encoding=UTF-8</maven.junit.jvmargs>

        <!--Version of local published snapshots-->
        <snapshot.version>1.0-SNAPSHOT</snapshot.version>

        <!--Frameworks versions-->
        <zookeeper.version>3.4.5-cdh5.0.3</zookeeper.version>
        <protobuf-java.version>2.5.0</protobuf-java.version>

        <!--Logging-->
        <slf4j.version>1.7.6</slf4j.version>
        <logback-classic.version>1.1.2</logback-classic.version>

        <!--Testings-->
        <junit.version>4.11</junit.version>

        <!--Scala stuff version-->
        <scala.version>2.10.4</scala.version>
        <scala.binary.version>2.10</scala.binary.version>
        <kafka.version>0.8.1.1</kafka.version>

    </properties>

    <repositories>
        <repository>
            <id>oss.sonatype.org</id>
            <url>http://oss.sonatype.org/content/repositories/releases</url>
            <name>Sonatype's OSS Maven Repository</name>
        </repository>
        <repository>
            <id>cloudera</id>
            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
            <name>Cloudera Maven Repository</name>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>dtrott-public</id>
            <name>David Trott's Public Repository</name>
            <url>http://maven.davidtrott.com/repository</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!--SCALA-->
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
            <version>${scala.version}</version>
        </dependency>

        <!--LOGGING-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!--TESTING-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <phase>none</phase>
                        </execution>
                        <execution>
                            <id>default-testCompile</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.3.1</version>
                    <executions>
                        <execution>
                            <id>enforce</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <alwaysPass/>
                                    <!--<dependencyConvergence/>-->
                                    <bannedDependencies>
                                        <excludes>
                                            <exclude>log4j:log4j</exclude>
                                            <exclude>org.slf4j:slf4j-log4j12</exclude>
                                        </excludes>
                                    </bannedDependencies>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>com.google.protobuf.tools</groupId>
                    <artifactId>maven-protoc-plugin</artifactId>
                    <version>0.1.10</version>
                    <executions>
                        <execution>
                            <id>generate-sources</id>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <phase>generate-sources</phase>
                            <configuration>
                                <protoSourceRoot>${basedir}/src/main/proto/</protoSourceRoot>
                                <includes>
                                    <param>**/*.proto</param>
                                </includes>
                            </configuration>
                        </execution>
                    </executions>
                    <configuration>
                        <protocExecutable>/usr/local/bin/protoc</protocExecutable>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.1.6</version>
                    <executions>
                        <execution>
                            <id>scala-compile</id>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>scala-test-compile</id>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <recompileMode>incremental</recompileMode>
                        <jvmArgs>
                            <jvmArg>-Xms640m</jvmArg>
                            <jvmArg>-Xmx2040m</jvmArg>
                            <jvmArg>-XX:MaxPermSize=524m</jvmArg>
                            <jvmArg>-XX:+CMSPermGenSweepingEnabled</jvmArg>
                            <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                        </jvmArgs>
                        <javacArgs>
                            <javacArg>-source</javacArg>
                            <javacArg>1.6</javacArg>
                            <javacArg>-target</javacArg>
                            <javacArg>1.6</javacArg>
                        </javacArgs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
